# marcopolo

./: .gitignore  README.md  REFERENCE.txt  contributors.txt  reference.txt  setup.py  todo.txt
Malote/: .dropbox  requirements.txt
Malote/env/: pip-selfcheck.json
Malote/gui/: bower.json  gruntfile.js  karma.conf.js  package.json
Malote/malote/: goth_empire.py  master.py  master_cookie.py  minion.py  util.py
Malote/malote_conf/: config.py
Malote/minion_conf/: config.py
auxfiles/: files.txt
bindings/: setup.py
bindings/cpp/: references.txt
bindings/python/: setup.py
daemon/: marcostop.py  poloreload.py  polostop.py
daemon/systemv/: marco
daemon/twistd/: marco_twistd.tac  polo_twistd.tac
discoveryprotocol/: referencias
discoveryprotocol/marcopolo/: polo.py
doc/: Makefile
doc/source/: Fundamentals.rst  bindings.rst  bindings.rst~  commands.rst  conf.py  configuration.rst  daemons.rst  fundamentals.rst  index.rst  reference.rst  services.rst  utilities.rst
doc/tech/: skeleton_for_message.json~
marcopolo/: classes_No_Name.dot  packages_No_Name.dot  setup.py
marcopolo/asyncexample/: asyncore_echo_server.py  scan-file.txt
marcopolo/bindings/: setup.py
marcopolo/bindings/cpp/marcopolo/: CMakeLists.txt
marcopolo/bindings/cpp/marcopolo/include/: marco.h  marco.hpp  node.hpp  utf8.h
marcopolo/bindings/cpp/marcopolo/src/: main.cpp  marco.cpp  utf8.cpp
marcopolo/daemon/: marco.service  marcostop.py  polo  polo.service  polostop.py
marcopolo/marco/: conf.py  marco.py  marcoasync.py  marcobinding.py  marcod.py
marcopolo/marco_conf/: conf.py
marcopolo/marcopolo/: marcopolo.conf
marcopolo/polo/: polo.py  poloasync.py  polobinding.py  polobindingssl.py  polod.py  tokenprovider.py
marcopolo/services_example/: skel
marcopolo/tests/: test_marco.py  test_marco_binding.py  test_polo_binding.py
marcoshell/: .marcoscp.sh.swp  marcodiscover.py  marcoinstallkey.py  marcoinstallkey.sh  marcoscp.sh  setup.py
marcoshell/marcoutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
marcoshell/shellutils/: marcoinstallkey.sh
(+196 files in other folders)
